@@ -1,3 +1,7 @@
+2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixPathTest.cs.
+
 2006-01-02  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Mono.Posix.dll.sources: Remove Mono.Unix obsolete files.
